Don't build tests when building OSX framework

--- a/DummySpit.xcodeproj/xcshareddata/xcschemes/DummySpitOSX.xcscheme
+++ b/DummySpit.xcodeproj/xcshareddata/xcschemes/DummySpitOSX.xcscheme
@@ -22,10 +22,10 @@
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "YES"
+            buildForRunning = "NO"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "DDC8163D1AFA08C7004D99DD"
